--- a/chrome/content/index.html
+++ b/chrome/content/index.html
@@ -1,5 +1,5 @@
-<head>
-    <title>Praise jeebus</title>
+ <head>
+    <title>Dis works? Dis works.</title>
     <link rel="stylesheet" type="text/css" href="chrome://tabby/content/skin/overlay.css">
     <link rel="stylesheet" href="chrome://tabby/content/assets/font-awesome-4.1.0/css/font-awesome.min.css">
 </head>
@@ -16,16 +16,19 @@ background-repeat: no-repeat; background-attachment:fixed;">
     //Start bookmark fetching
     //Icons
     //To-do: get favicons
-    //var img = "<img src='chrome://tabby/content/assets/images/wf.png'> ";
-    var img = "<i class='fa fa-folder-o fa-inverse'></i>";
+    //var img = "<i class='fa fa-folder-o fa-inverse'></i>";
+    var img = "<img src='chrome://tabby/content/assets/images/wf.png'> ";
     var blank = "    ";
     //<img src='chrome://tabby/content/assets/images/blank.png'>
     var bookmarks = getBookmarks();
     var html = "";
+
     var toType = function(obj) {
         return ({}).toString.call(obj).match(/\s([a-zA-Z]+)/)[1].toLowerCase()
     }
+
     var i=0;
+    
     while(i<bookmarks.length) {
         var bookmark = bookmarks[i];
         if(bookmark.folder) {
@@ -36,6 +39,7 @@ background-repeat: no-repeat; background-attachment:fixed;">
             i++;
         }
     }
+
     function createFolder(bookmarks) {
         var folderHtml = "";
         folderHtml += "<li><span class='Collapsable'>" + img + bookmarks[i].title + "</span><ul>";
@@ -44,6 +48,7 @@ background-repeat: no-repeat; background-attachment:fixed;">
         folderHtml += "</ul></li>";
         return folderHtml;
     }
+
     function createSubFolder(bookmarks,num) {
         var subFolderHtml = "";
         subFolderHtml += "<li><span class='Collapsable'>" + img + bookmarks[num].title + "</span><ul>";
@@ -52,6 +57,7 @@ background-repeat: no-repeat; background-attachment:fixed;">
         subFolderHtml += "</ul></li>";
         return subFolderHtml;
     }
+
     function folderContents(bookmarks) {
         var contentsHtml = "";
         for(var c=0; c < bookmarks.length;c++) {
@@ -66,11 +72,10 @@ background-repeat: no-repeat; background-attachment:fixed;">
         i++;
         return contentsHtml;
     }
+
     //end bookmark fetching
     //output results into html doc body
-    var tabArray = fetchOptions();
-    var tabHtml = getTabs(tabArray);
-    document.body.innerHTML = "<ul>" + html + "</ul>" + tabHtml;
+    document.body.innerHTML = "<ul>" + html + "</ul>";
 
     //jQuery for bookmark tree
     //ref: https://stackoverflow.com/questions/5636375/how-to-create-a-collapsing-tree-table-in-html-css-js
@@ -81,24 +86,4 @@ background-repeat: no-repeat; background-attachment:fixed;">
     $(".Collapsable").click(toggle);
     $(".Collapsable").each(toggle);
     //end bookmark tree
-
-    //jquery animation for tabs
-    $(function() {
-        $('div.tab').hover(function() {
-            // animate out
-            $(this)
-                .stop(true, false)
-                .animate({
-                    right: 0
-                }, 200);
-        }, function() {
-            // move mouse, animate back in
-            $(this)
-                .stop(true, false)
-                .animate({
-                    right: -15
-                }, 200);
-        });
-    });
-    //end tabs
 </script>
